// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check amount of visible expenses with 1 expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $1.95
  </p>
</div>
`;

exports[`check total of visible expenses with multiple expenses 1`] = `
<div>
  <p>
    Viewing 3 expenses totalling $1,141.95
  </p>
</div>
`;
